--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,4 +1,4 @@
 cmake_minimum_required(VERSION 3.0)
 project(helloCMake)
 
-add_executable(helloCMake main.c)
+add_executable(helloCMake src/main.c)
